--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,35 @@
-@import './base.css';
+/*@import './base.css'; */
 
+
+html, body, #app{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
 #app {
-  max-width: 800px;
+  max-width: 1100px;
   width:100%;
-  min-width:600px;
   margin: 0 auto;
-  padding: 0.2rem;
-  font-weight: normal;
 }
 
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: transparent;
+    background-color:#59b65a;
+    color:#fff;
+    padding:4px;
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 0 0.2rem;
+@media (max-width:500px){
+  #app{
+    width:100%;
+    max-width:280px;
   }
 }
